syntax = "proto3";

package com.academy.fintech.application;

option java_multiple_files = true;

service ApplicationService{
  rpc Create(ApplicationRequest) returns (ApplicationResponse) {}
  rpc Cancel(CancelApplicationRequest) returns (CancelApplicationResponse) {}
}

message ApplicationRequest{
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string salary = 4;
  string disbursementAmount = 5;
}

message ApplicationResponse{
  int32 applicationId = 1;
}

message CancelApplicationRequest{
  int32 applicationId = 1;
}

message CancelApplicationResponse{
  bool success = 1;
}

// Request Path
//com.academy.fintech.application.ApplicationService/Create